Refactor loading of chats & AIs
