# public/openapi-spec.json
@@ -124,6 +124,18 @@
           "description": {
             "type": "string",
             "description": "Description of the AI."
+          },
+          "userId": {
+            "type": "string",
+            "description": "Identifier of the AI's owner."
+          },
+          "userName": {
+            "type": "string",
+            "description": "The user name of the AI's owner."
+          },
+          "visibility": {
+            "type": "string",
+            "description": "The AI's visibility setting."
           }
         }
       },
